# word2vec-numpy

./: .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt  train.py
word2vec/: __init__.py  dataloader.py  model.py  vocab.py
