[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "word2vec-numpy"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "numba>=0.57",
]

[project.optional-dependencies]
eval = [
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
]

[project.scripts]
train-word2vec = "train:main"
