[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "word2vec-numpy"
version = "0.1.0"
description = "Pure NumPy implementation of Skip-Gram with Negative Sampling"
requires-python = ">=3.10"
authors = [{name = "Advit Arora"}]
readme = "README.md"
dependencies = [
    "numpy>=1.24",
    "numba>=0.57",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "adjustText>=1.0",
]

[project.scripts]
train-word2vec = "train:main"
